force-app/main/default/objects/Partner_Advisors__mdt/Partner_Advisors__mdt.object-meta.xml
<CustomObject>
    <description>This table will be used to pull relevant advisors to send with Purchase API</description>
    <label>Partner Advisors</label>
    <pluralLabel>Partner Advisors</pluralLabel>
</CustomObject>