force-app/main/default/objects/Partner_Advisors__mdt/fields/Advisor_Service__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Service__c</fullName>
    <label>Advisor Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>