force-app/main/default/objects/Partner_Advisors__mdt/fields/Advisor_Type__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Type__c</fullName>
    <label>Advisor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IAR</fullName>
                <default>true</default>
                <label>IAR</label>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>