force-app/main/default/objects/Partner_Advisors__mdt/fields/Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage__c</fullName>
    <label>Commission Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>