force-app/main/default/objects/Partner_Advisors__mdt/fields/Firm_Type__c.field-meta.xml
<CustomField>
    <fullName>Firm_Type__c</fullName>
    <inlineHelpText>Will be used on Firm API and Advisor API</inlineHelpText>
    <label>Firm Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RIA_FIRM</fullName>
                <default>true</default>
                <label>RIA_FIRM</label>
            </value>
            <value>
                <fullName>BROKER</fullName>
            </value>
            <value>
                <fullName>INSURANCE_AGENCY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>