force-app/main/default/objects/Partner_Advisors__mdt/fields/Require_Review__c.field-meta.xml
<CustomField>
    <fullName>Require_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Review</label>
    <type>Checkbox</type>
</CustomField>