force-app/main/default/objects/Partner_Advisors__mdt/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMMISSIONABLE</fullName>
                <default>true</default>
                <label>COMMISSIONABLE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>